--- a/apps/echoserver/main.yaml
+++ b/apps/echoserver/main.yaml
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echo
-  namespace: echoserver
+  namespace: echo
 spec:
   ports:
     - port: 80
