--- a/apps/echoserver/main.yaml
+++ b/apps/echoserver/main.yaml
@@ -57,4 +57,5 @@ spec:
         backend:
           service:
             name: echoserver
-            port: 80
+            port: 
+              number: 80
