--- a/apps/echoserver/main.yaml
+++ b/apps/echoserver/main.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: echo
+  name: echoserver
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echoserver
-  namespace: echo
+  namespace: echoserver
 spec:
   replicas: 1
   selector:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echoserver
-  namespace: echo
+  namespace: echoserver
 spec:
   ports:
     - port: 80
@@ -46,7 +46,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echoserver
-  namespace: echo
+  namespace: echoserver
   annotations:
 spec:
   rules:
