--- a/apps/argocd/kustomization.yaml
+++ b/apps/argocd/kustomization.yaml
@@ -4,9 +4,10 @@ kind: Kustomization
 namespace: argocd
 
 resources:
-- https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
+- https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml 
+- base/argocd-server-ingress.yaml
 
-patches: 
-- path: overlays/argocd-cm.yaml
-- path: overlays/argocd-cmd-params-cm.yaml
-- path: overlays/argocd-server-service.yaml
+patchesStrategicMerge: 
+- overlays/argocd-cm.yaml
+- overlays/argocd-cmd-params-cm.yaml
+- overlays/argocd-server-service.yaml
