User/RBAC settings

--- a/apps/argocd/overlays/argocd-cm.yaml
+++ b/apps/argocd/overlays/argocd-cm.yaml
@@ -3,6 +3,7 @@ kind: ConfigMap
 metadata:
   name: argocd-cm
 data:
+  accounts.anniken: login
   resource.customizations: |
     networking.k8s.io/Ingress:
       health.lua: |
