--- a/apps/argocd/kustomization.yaml
+++ b/apps/argocd/kustomization.yaml
@@ -11,3 +11,4 @@ patches:
 - path: overlays/argocd-cm.yaml
 - path: overlays/argocd-cmd-params-cm.yaml
 - path: overlays/argocd-server-service.yaml
+- path: overlays/argocd-rbac-cm.yaml
