longhorn - added override file for values

--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -5,3 +5,6 @@ namespace: bks-longhorn
 
 resources:
 - https://raw.githubusercontent.com/longhorn/longhorn/v1.5.3/deploy/longhorn.yaml
+
+patches:
+- path: overlays/longhorn-default-settings.yaml
