--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: bks-longhorn
 
 resources:
 - https://raw.githubusercontent.com/longhorn/longhorn/v1.5.3/deploy/longhorn.yaml
+- base/longhorn-ingress.yaml
 
 patches:
 - path: overlays/longhorn-default-settings.yaml
