--- a/apps/longhorn/base/longhorn-ingress.yaml
+++ b/apps/longhorn/base/longhorn-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   basicAuth:
     removeHeader: true
-    secret: my-auth
+    secret: longhorn-auth
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
