--- a/apps/mail/Chart.yaml
+++ b/apps/mail/Chart.yaml
@@ -6,8 +6,7 @@ icon: https://bokysan.github.io/docker-postfix/postfix.png
 maintainers:
 - name: Bokysan
   url: https://github.com/bokysan
-name: mail
-sources:
-- https://github.com/bokysan/docker-postfix
-type: application
-version: 4.3.0
+dependencies:
+  - name: mail
+    version:  4.3.0
+    repository: https://github.com/bokysan/docker-postfix
