--- a/apps/argocd/overlays/argocd-cm.yaml
+++ b/apps/argocd/overlays/argocd-cm.yaml
@@ -4,6 +4,7 @@ metadata:
   name: argocd-cm
 data:
   accounts.anniken: login
+  accounts.testread: login
   resource.customizations: |
     networking.k8s.io/Ingress:
       health.lua: |
