--- a/apps/argocd/overlays/argocd-rbac-cm.yaml
+++ b/apps/argocd/overlays/argocd-rbac-cm.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 data:
   policy.csv: |
     g, anniken, role:admin
+    g, testread, role:readonly
     p, *, applications, get, echoserver/echoserver, allow
 kind: ConfigMap
 metadata:
