--- a/apps/argocd/overlays/argocd-rbac-cm.yaml
+++ b/apps/argocd/overlays/argocd-rbac-cm.yaml
@@ -2,8 +2,11 @@ apiVersion: v1
 data:
   policy.csv: |
     g, anniken, role:admin
-    g, testread, role:readonly
     p, *, applications, get, echoserver/echoserver, allow
+    p, *, clusters, get, echoserver/echoserver, allow
+    p, *, repositories, get, echoserver/echoserver, allow
+    p, *, certificates, get, echoserver/echoserver, allow
+    p, *, logs, get, echoserver/echoserver, allow
 kind: ConfigMap
 metadata:
   annotations:
