--- a/apps/argocd/overlays/argocd-rbac-cm.yaml
+++ b/apps/argocd/overlays/argocd-rbac-cm.yaml
@@ -2,15 +2,8 @@ apiVersion: v1
 data:
   policy.csv: |
     g, anniken, role:admin
-    p, *, applications, get, echoserver/*, allow
-    p, *, certificates, get, ecoserver/*, allow
-    p, *, clusters, get, echoserver/*, allow
-    p, *, repositories, get, echoserver/*, allow
-    p, *, write-repositories, get, echoserver/*, allow
-    p, *, projects, get, echoserver/*, allow
-    p, *, accounts, get, echoserver/*, allow
-    p, *, gpgkeys, get, echoserver/*, allow
-    p, *, logs, get, echoserver/*, allow
+    p, echo-access, applications, get, echoserver/*, allow
+    g, testread, role:echo-access
 kind: ConfigMap
 metadata:
   annotations:
