--- a/apps/argocd/overlays/argocd-rbac-cm.yaml
+++ b/apps/argocd/overlays/argocd-rbac-cm.yaml
@@ -3,6 +3,7 @@ data:
   policy.csv: |
     g, anniken, role:admin
     p, role:echo-access, applications, get, echoserver/*, allow
+    p, role:echo-access, clusters, get, *, allow
     g, testread, role:echo-access
 kind: ConfigMap
 metadata:
